# nlp-book-club

./: LICENSE  README.md  paper-suggestions.md  pyproject.toml
.github/workflows/: discord_create_event.yml  discord_create_polls.yml  discord_reminder_message.yml
backlog/: born-again-neural-networks.md  efficient-streaming-language-models-with-attention-sinks.md  fastformers.md  lilt.md  long-expressive-memory-for-sequence-modeling.md  lottery-ticket-hypothesis.md  mixtral-of-experts.md  nougat-ocr.md  vision-transformers-need-registers.md
bot/: discord.py  folders.py  templates.py
events/: 2022-06-lm-debugger.md  2022-07-layout-lm-v3.md  2022-08-block-pruning-for-faster-transforms.md  2022-09-cycle-ner.md  2022-10-train-large-then-compress.md  2022-11-fastformers.md  2023-02-rl-from-human-feedback.md  2023-08-ocr-free-document-understanding-transformer.md  2023-09-impossible-distillation.md  2023-10-nougat-ocr.md  2024-01-text-flint.md  2024-04-direct-preference-optimization.md  2024-05-making-monolingual-sentence-embeddings-multilingual.md
lost-papers/: gpt-neo-x-20b.md  learning-strides.md  sgd-can-converge-to-local-maxima.md
