[tool.poetry]
name = "bot"
version = "0.1.0"
description = "discord bot for the nlp-book-club setup"
authors = ["Benedikt Fuchs <benedikt.fuchs.staw@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
discord-py = "^2.3.0"
pytz = "^2023.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
